# Kernal

./: Configuring_ubuntu.sh  FaceID  未命名绘图.drawio
CMAKE/Hello/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  config.h  config.h.in  hello.cpp  mm.sh
CMAKE/Hello/cal/: CMakeLists.txt  Makefile  addaction.cpp  cmake_install.cmake  subtion.cpp  subtion.h
IMX6ULL_Pro/100ask_imx6ull-sdk/IMX/Buildroot_2020.02.x/: Makefile
JAVA/: HelloWorld.java  mm.sh
TEST/Driver/Buttoon/Imx6ull_button/: Makefile  board_100ask_imx6ull.c  button_app.c  button_drv.c
TEST/Driver/DTB/: 100ask.dts
TEST/Driver/Hello/: Makefile
TEST/Driver/LED/Led_1/: Makefile  app.c  buill.sh  led_drive.c
TEST/Driver/LED/Led_2(led_operation)/: Makefile  led_app.c  led_drv.c  led_operation.c  led_operation.h
TEST/Driver/LED/Led_Test/: Makefile  app.c  led_devices.c  led_driver.c  led_drv.c
TEST/Driver/LED/Led_bus/: Makefile  board_A.c  buill.sh  chip_demo_gpio.c  led_drv.c
TEST/Driver/LED/Led_for_imx6ull/: Makefile  led_drv.c  led_operation.c  led_operation.h
TEST/Driver/LED/Led_resource/: Makefile  board_A.c  (+3 more)
TEST/I2C/EEPROM/: Makefile  i2cdevice.c  shell.sh
TEST/Input/: 01_input.c  02_input.c  03_input_poll.c  04_input_select.c  05_input_read_sign.c  Makefile  shell.sh
TEST/Pthread/: Pthread.c
TEST/Pthread/Thread/: Makefile  Pthread.c  Pthread_cond.c  Pthread_mutex.c  Pthread_semaphore.c
TEST/Socket/TcpSocket/: TcpClent.c  TcpServer.c
TEST/Socket/UdpSocket/: UdpClient.c  UdpServer.c
TEST/Ts/: ts_test.c
i2c-tools-4.2/: Makefile
shll/: icc_xts.sh  mm.sh  test.sh  test1.txt  test2.sh
shll/KK/: listOK.txt  log.txt  test.sh
shll/Resource_test/: Auto.sh  Pressure_Resource.sh  auto.test.sh  flie_checkout.sh
tslib-1.21/: Makefile  Makefile.in  config.status
tslib-1.21/autom4te.cache/: requests  traces.0
tslib-1.21/doc/: Makefile
tslib-1.21/etc/: Makefile
tslib-1.21/plugins/: Makefile  debounce.la  input.la  invert.la  lowpass.la  pthres.la  variance.la  waveshare.la
tslib-1.21/plugins/.libs/: dejitter.la  evthres.la  iir.la  linear.la  median.la  skip.la
tslib-1.21/src/: Makefile
tslib-1.21/tests/: Makefile  ts_calibrate  ts_conf  ts_finddev  ts_harvest  ts_print  ts_print_mt  ts_print_raw  ts_test  ts_test_mt  ts_verify
tslib-1.21/tools/: Makefile  ts_uinput
(+97 files in other folders)
